src/bpmncwpverify/antlr/FeelExprParser.py
# Generated from antlr/FeelExpr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FeelExprParser ( Parser ):

    grammarFileName = "FeelExpr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'for'", "'return'", "'in'", 
                     "'if'", "'then'", "'else'", "'some'", "'every'", "'choose'", 
                     "'satisfies'", "'instance'", "'of'", "'function'", 
                     "'external'", "'or'", "'and'", "'Xor'", "'between'", 
                     "'null'", "'undefined'", "'true'", "'false'", "'''", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "'..'", "'.'", "'...'", 
                     "'='", "'>'", "'<'", "'<='", "'>='", "'!='", "':'", 
                     "'->'", "'**'", "'+'", "'-'", "'*'", "'/'", "'!'", 
                     "'not'", "'@'" ]

    symbolicNames = [ "<INVALID>", "BooleanLiteral", "FOR", "RETURN", "IN", 
                      "IF", "THEN", "ELSE", "SOME", "EVERY", "CHOOSE", "SATISFIES", 
                      "INSTANCE", "OF", "FUNCTION", "EXTERNAL", "OR", "AND", 
                      "XOR", "BETWEEN", "NULL", "UNDEFINEDVALUE", "TRUE", 
                      "FALSE", "QUOTE", "IntegerLiteral", "FloatingPointLiteral", 
                      "StringLiteral", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COMMA", "ELIPSIS", "DOT", "SPREAD", 
                      "EQUAL", "GT", "LT", "LE", "GE", "NOTEQUAL", "COLON", 
                      "RARROW", "POW", "ADD", "SUB", "MUL", "DIV", "BANG", 
                      "NOT", "AT", "Identifier", "WS", "COMMENT", "LINE_COMMENT", 
                      "ANY_OTHER_CHAR" ]

    RULE_compilation_unit = 0
    RULE_expression = 1
    RULE_textualExpression = 2
    RULE_parameters = 3
    RULE_namedParameters = 4
    RULE_namedParameter = 5
    RULE_positionalParameters = 6
    RULE_forExpression = 7
    RULE_iterationContexts = 8
    RULE_iterationContext = 9
    RULE_ifExpression = 10
    RULE_quantifiedExpression = 11
    RULE_type = 12
    RULE_list = 13
    RULE_functionDefinition = 14
    RULE_formalParameters = 15
    RULE_formalParameter = 16
    RULE_context = 17
    RULE_contextEntries = 18
    RULE_contextEntry = 19
    RULE_key = 20
    RULE_nameDefinition = 21
    RULE_nameDefinitionWithEOF = 22
    RULE_nameDefinitionTokens = 23
    RULE_iterationNameDefinition = 24
    RULE_iterationNameDefinitionTokens = 25
    RULE_additionalNameSymbol = 26
    RULE_conditionalOrExpression = 27
    RULE_conditionalXOrExpression = 28
    RULE_conditionalAndExpression = 29
    RULE_comparisonExpression = 30
    RULE_relationalExpression = 31
    RULE_expressionList = 32
    RULE_additiveExpression = 33
    RULE_multiplicativeExpression = 34
    RULE_powerExpression = 35
    RULE_pathDescendantFilterExpression = 36
    RULE_unaryExpression = 37
    RULE_unaryExpressionNotPlusMinus = 38
    RULE_chooseExpression = 39
    RULE_tripleExpression = 40
    RULE_tripleList = 41
    RULE_primary = 42
    RULE_literal = 43
    RULE_atLiteral = 44
    RULE_atLiteralValue = 45
    RULE_simplePositiveUnaryTest = 46
    RULE_simplePositiveUnaryTests = 47
    RULE_simpleUnaryTests = 48
    RULE_positiveUnaryTest = 49
    RULE_positiveUnaryTests = 50
    RULE_unaryTestsRoot = 51
    RULE_unaryTests = 52
    RULE_endpoint = 53
    RULE_interval = 54
    RULE_qualifiedName = 55
    RULE_nameRef = 56
    RULE_nameRefOtherToken = 57
    RULE_reusableKeywords = 58

    ruleNames =  [ "compilation_unit", "expression", "textualExpression", 
                   "parameters", "namedParameters", "namedParameter", "positionalParameters", 
                   "forExpression", "iterationContexts", "iterationContext", 
                   "ifExpression", "quantifiedExpression", "type", "list", 
                   "functionDefinition", "formalParameters", "formalParameter", 
                   "context", "contextEntries", "contextEntry", "key", "nameDefinition", 
                   "nameDefinitionWithEOF", "nameDefinitionTokens", "iterationNameDefinition", 
                   "iterationNameDefinitionTokens", "additionalNameSymbol", 
                   "conditionalOrExpression", "conditionalXOrExpression", 
                   "conditionalAndExpression", "comparisonExpression", "relationalExpression", 
                   "expressionList", "additiveExpression", "multiplicativeExpression", 
                   "powerExpression", "pathDescendantFilterExpression", 
                   "unaryExpression", "unaryExpressionNotPlusMinus", "chooseExpression", 
                   "tripleExpression", "tripleList", "primary", "literal", 
                   "atLiteral", "atLiteralValue", "simplePositiveUnaryTest", 
                   "simplePositiveUnaryTests", "simpleUnaryTests", "positiveUnaryTest", 
                   "positiveUnaryTests", "unaryTestsRoot", "unaryTests", 
                   "endpoint", "interval", "qualifiedName", "nameRef", "nameRefOtherToken", 
                   "reusableKeywords" ]

    EOF = Token.EOF
    BooleanLiteral=1
    FOR=2
    RETURN=3
    IN=4
    IF=5
    THEN=6
    ELSE=7
    SOME=8
    EVERY=9
    CHOOSE=10
    SATISFIES=11
    INSTANCE=12
    OF=13
    FUNCTION=14
    EXTERNAL=15
    OR=16
    AND=17
    XOR=18
    BETWEEN=19
    NULL=20
    UNDEFINEDVALUE=21
    TRUE=22
    FALSE=23
    QUOTE=24
    IntegerLiteral=25
    FloatingPointLiteral=26
    StringLiteral=27
    LPAREN=28
    RPAREN=29
    LBRACE=30
    RBRACE=31
    LBRACK=32
    RBRACK=33
    COMMA=34
    ELIPSIS=35
    DOT=36
    SPREAD=37
    EQUAL=38
    GT=39
    LT=40
    LE=41
    GE=42
    NOTEQUAL=43
    COLON=44
    RARROW=45
    POW=46
    ADD=47
    SUB=48
    MUL=49
    DIV=50
    BANG=51
    NOT=52
    AT=53
    Identifier=54
    WS=55
    COMMENT=56
    LINE_COMMENT=57
    ANY_OTHER_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Compilation_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(FeelExprParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(FeelExprParser.EOF, 0)

        def getRuleIndex(self):
            return FeelExprParser.RULE_compilation_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilation_unit" ):
                listener.enterCompilation_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilation_unit" ):
                listener.exitCompilation_unit(self)




    def compilation_unit(self):

        localctx = FeelExprParser.Compilation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilation_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.expression()
            self.state = 119
            self.match(FeelExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FeelExprParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExpressionTextualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FeelExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def textualExpression(self):
            return self.getTypedRuleContext(FeelExprParser.TextualExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionTextual" ):
                listener.enterExpressionTextual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionTextual" ):
                listener.exitExpressionTextual(self)



    def expression(self):

        localctx = FeelExprParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            localctx = FeelExprParser.ExpressionTextualContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.textualExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextualExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(FeelExprParser.FunctionDefinitionContext,0)


        def conditionalOrExpression(self):
            return self.getTypedRuleContext(FeelExprParser.ConditionalOrExpressionContext,0)


        def getRuleIndex(self):
            return FeelExprParser.RULE_textualExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextualExpression" ):
                listener.enterTextualExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextualExpression" ):
                listener.exitTextualExpression(self)




    def textualExpression(self):

        localctx = FeelExprParser.TextualExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_textualExpression)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.functionDefinition()
                pass
            elif token in [1, 2, 5, 8, 9, 10, 20, 21, 25, 26, 27, 28, 30, 32, 33, 38, 39, 40, 41, 42, 43, 47, 48, 52, 53, 54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.conditionalOrExpression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FeelExprParser.RULE_parameters

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParametersNamedContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FeelExprParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(FeelExprParser.LPAREN, 0)
        def namedParameters(self):
            return self.getTypedRuleContext(FeelExprParser.NamedParametersContext,0)

        def RPAREN(self):
            return self.getToken(FeelExprParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersNamed" ):
                listener.enterParametersNamed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersNamed" ):
                listener.exitParametersNamed(self)


    class ParametersEmptyContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FeelExprParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(FeelExprParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(FeelExprParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersEmpty" ):
                listener.enterParametersEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersEmpty" ):
                listener.exitParametersEmpty(self)


    class ParametersPositionalContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FeelExprParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(FeelExprParser.LPAREN, 0)
        def positionalParameters(self):
            return self.getTypedRuleContext(FeelExprParser.PositionalParametersContext,0)

        def RPAREN(self):
            return self.getToken(FeelExprParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersPositional" ):
                listener.enterParametersPositional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersPositional" ):
                listener.exitParametersPositional(self)



    def parameters(self):

        localctx = FeelExprParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameters)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = FeelExprParser.ParametersEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(FeelExprParser.LPAREN)
                self.state = 128
                self.match(FeelExprParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = FeelExprParser.ParametersNamedContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(FeelExprParser.LPAREN)
                self.state = 130
                self.namedParameters()
                self.state = 131
                self.match(FeelExprParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = FeelExprParser.ParametersPositionalContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(FeelExprParser.LPAREN)
                self.state = 134
                self.positionalParameters()
                self.state = 135
                self.match(FeelExprParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namedParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FeelExprParser.NamedParameterContext)
            else:
                return self.getTypedRuleContext(FeelExprParser.NamedParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FeelExprParser.COMMA)
            else:
                return self.getToken(FeelExprParser.COMMA, i)

        def getRuleIndex(self):
            return FeelExprParser.RULE_namedParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedParameters" ):
                listener.enterNamedParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedParameters" ):
                listener.exitNamedParameters(self)




    def namedParameters(self):

        localctx = FeelExprParser.NamedParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_namedParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.namedParameter()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 140
                self.match(FeelExprParser.COMMA)
                self.state = 141
                self.namedParameter()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
